# odyssey_old

./: .gitignore  CMakeLists.txt
assets_src/shaders/: triangle.frag  triangle.vert
cmake/: odyssey_project.cmake
include/: odyssey.h
include/odyssey/: defines.h  entry.h  game.h  types.h  win_entry.h
include/odyssey/core/: assert.h  engine.h  logger.h
include/odyssey/platform/: platform_layer.h  win_platform_layer.h
scripts/: engine.lua  setup.lua
src/: entry.h  game.h
src/core/: engine.cpp  logger.cpp
src/platform/: platform_layer.cpp  win_platform.cpp  win_platform_layer.cpp
src/renderer/: renderer_backend.h  renderer_frontend.cpp  renderer_frontend.h  renderer_types.h
src/renderer/vulkan/: vulkan_backend.cpp  vulkan_backend.h  vulkan_device.cpp  vulkan_device.h  vulkan_initializers.cpp  vulkan_initializers.h  vulkan_mesh.cpp  vulkan_mesh.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_types.h
src/resources/: resource_types.h
